Temporarily disable certain warnings
warn

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,5 +25,16 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_STATIC_LIBRARY_PREFIX "")
 
+add_compile_options(-Wno-multichar)
+add_compile_options(-Wno-write-strings)
+add_compile_options(-Wno-return-type)
+add_compile_options($<$<COMPILE_LANGUAGE:C>:-Wno-pointer-to-int-cast>)
+add_compile_options($<$<COMPILE_LANGUAGE:C>:-Wno-int-to-pointer-cast>)
+add_compile_options($<$<COMPILE_LANGUAGE:C>:-Wno-incompatible-pointer-types>)
+add_compile_options($<$<COMPILE_LANGUAGE:CXX>:-Wno-register>)
+add_compile_options(-fpermissive)
+add_compile_options(-funsigned-char)
+
+
 # Add source tree
 add_subdirectory(src)
